--- a/style.css
+++ b/style.css
@@ -1,123 +1,101 @@
 @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
 
-/* اضافه کردن فونت آیکون اینستاگرام */
-@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
-
 body {
     margin: 0;
     padding: 0;
-    height: 100vh;
-background: #000;
+    background: linear-gradient(rgba(0,0,0,0.85),rgba(0,0,0,0.96)), url('Background.png') no-repeat center center/cover;
     color: #bdbbb0;
     font-family: 'Share Tech Mono', 'Courier New', Courier, monospace;
+    min-height: 100vh;
 }
 
 .menu {
     position: absolute;
-.menu {
-    position: absolute;
-    left: 50%;
     top: 50%;
-    transform: translate(-50%, -42%);
-    /* وسط‌چین کامل منو */
-    min-width: 180px;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    min-width: 220px;
 }
 
 .menu ul {
-/* نامرتب کردن ظاهری خطوط لیست منو */
-.menu li:nth-child(1) { --rand-offset: 5px;  --rand-skew: 1.2deg; --rand-pad: 11px;}
-.menu li:nth-child(2) { --rand-offset: -3px; --rand-skew: -1.5deg; --rand-pad: 7px;}
-.menu li:nth-child(3) { --rand-offset: 9px;  --rand-skew: 2.4deg;  --rand-pad: 15px;}
-.menu li:nth-child(4) { --rand-offset: -7px; --rand-skew: -2deg;  --rand-pad: 3px;}
-.menu li:nth-child(5) { --rand-offset: 3px;  --rand-skew: 1.6deg;  --rand-pad: 9px;}
-.menu li:nth-child(6) { --rand-offset: -2px; --rand-skew: -2deg;  --rand-pad: 6px;}
-    list-style: none;
+    list-style: none !important;
     padding: 0;
+    margin: 0;
 }
 
 .menu li {
-color: #babbb0;
-    letter-spacing: 2px;
-    margin-bottom: 22px;
-    font-size: 0.95em;
+    font-size: 1.07em;
+    margin-bottom: 18px;
+    color: #babbb0;
     display: flex;
     align-items: center;
-    opacity: 0.93;
-    transition: color 0.22s, filter 0.22s, transform 0.17s;
-    filter: brightness(0.74) blur(0.4px);
-    /* عقب جلو شدن نامنظم */
-    transform: translateX(var(--rand-offset, 0px)) skewY(var(--rand-skew, 0deg));
-    /* تراز چپ جزیی */
-    justify-content: flex-start;
-    padding-left: var(--rand-pad, 2px);
+    opacity: 0.91;
+    transition: color 0.21s, filter 0.2s, transform 0.15s;
     cursor: pointer;
+    filter: brightness(0.8) blur(0.2px);
+    /* افکت نامنظم کردن مکان آیتم */
 }
-
 .menu li:hover {
     color: #ffe680;
-    filter: brightness(1.12) blur(0);
-    background: rgba(40,40,0,0.16);
-    box-shadow: 0 2px 16px #efd40124;
-    transform: translateX(calc(var(--rand-offset, 0px) + 6px)) scale(1.06) skewY(var(--rand-skew, 0deg));
-    z-index:3;
+    filter: brightness(1.08) blur(0);
+    transform: translateX(6px) scale(1.06);
+    z-index: 2;
 }
 
 .menu li .icon {
     border-radius: 50%;
-    background: rgba(30,30,30,0.4);
+    background: rgba(30,30,30,0.25);
     color: #c8c7ad;
-    border: 1.7px solid #655f4f;
-    width: 1.8em;
-    height: 1.8em;
+    border: 1.2px solid #655f4f;
+    width: 1.65em;
+    height: 1.65em;
     display: inline-flex;
     align-items: center;
     justify-content: center;
     margin-right: 10px;
-    font-weight: bold;
-    font-size: 1.1em;
-    box-shadow: 0 0 10px #3c3700cc;
+    font-size: 1em;
 }
 
 .menu li .badge {
     background: #ffe680;
     color: #222;
     border-radius: 2px;
-    font-size: 0.82em;
+    font-size: 0.83em;
     padding: 2px 6px;
     margin-left: 7px;
     font-weight: bold;
 }
 
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
+li .insta {
+    font-family: FontAwesome;
+    font-style: normal;
+    font-size: 1.17em !important;
+    margin-right: 8px !important;
+}
+
 .center-text {
     position: absolute;
-    top: 38%;
-    left: 46%;
-    transform: translate(-30%, -38%);
+    top: 16%;
+    left: 60%;
+    transform: translate(-18%, 0);
     color: #bdbbb0;
     text-align: left;
-    text-shadow: 0 3px 17px #000a, 0 1px 2px #fff7;
+    text-shadow: 0 3px 17px #000a;
+    pointer-events: none;
 }
 
 .center-text h1 {
-    font-size: 2.8em;
+    font-size: 2.1em;
     font-weight: 400;
-    opacity: 0.32;
+    opacity: 0.22;
     margin: 0 0 0.1em 0;
 }
 
 .center-text h2 {
-    font-size: 1.4em;
-    font-weight: 300;
-    opacity: 0.2;
+    font-size: 1.10em;
+    font-weight: 350;
+    opacity: 0.13;
     letter-spacing: 1.5px;
     margin: 0;
 }
-
-li .insta {
-    font-family: FontAwesome;
-    font-style: normal;
-    font-size: 1.2em !important;
-    margin-right: 8px !important;
-}
-
-
