--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 body {
     margin: 0;
     padding: 0;
-    background: linear-gradient(rgba(0,0,0,0.85),rgba(0,0,0,0.96)), url('Background.png') no-repeat center center/cover;
+    background: linear-gradient(rgba(0,0,0,0.85),rgba(0,0,0,0.96)), url('https://github.com/Aaarmaan/ArtWeb/blob/main/Background.png?raw=true') no-repeat center center/cover;
     color: #bdbbb0;
     font-family: 'Share Tech Mono', 'Courier New', Courier, monospace;
     min-height: 100vh;
