--- a/style.css
+++ b/style.css
@@ -2,9 +2,7 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
 
 body {
-    background: linear-gradient(rgba(0,0,0,0.82), rgba(0,0,0,0.82)),
-    url('Background.png') no-repeat center center/cover;
-
+    background: url('Background.png') no-repeat center center/cover;
 }
 
 /* ------ Center Text ------ */
