--- a/style.css
+++ b/style.css
@@ -7,29 +7,17 @@
     box-sizing: border-box;
 }
 
-html, body {
-    height: 100%;
-    font-family: 'Share Tech Mono', monospace;
-    overflow-x: hidden;
+html {
+    background: url('Background.png') no-repeat center center fixed;
+    background-size: cover;
+    background-color: #2a2a2a;
+    min-height: 100%;
 }
 
 body {
-    background: url('Background.png') no-repeat center center fixed;
-    background-size: cover;
+    background: transparent;
     min-height: 100vh;
-}
-
-/* حذف استایل پیش‌فرض لینک‌ها */
-a {
-    color: inherit;
-    text-decoration: none;
-    outline: none;
-}
-
-a:hover, a:visited, a:focus, a:active {
-    color: inherit;
-    text-decoration: none;
-    outline: none;
+    font-family: 'Share Tech Mono', monospace;
 }
 
 /* ------ Center Text ------ */
@@ -42,7 +30,6 @@ a:hover, a:visited, a:focus, a:active {
     text-align: left;
     text-shadow: 0 3px 17px #000a, 0 1px 2px #fff7;
     pointer-events: none;
-    z-index: 1;
 }
 
 .center-text h1 {
@@ -67,7 +54,6 @@ a:hover, a:visited, a:focus, a:active {
     top: 50%;
     transform: translate(-50%, -42%);
     min-width: 180px;
-    z-index: 10;
 }
 
 .menu ul {
@@ -147,20 +133,12 @@ a:hover, a:visited, a:focus, a:active {
 
 /* ------- Responsive for Mobile ------- */
 @media (max-width: 700px) {
-    body {
-        background-attachment: scroll;
-        background-position: center center;
-        background-size: cover;
-        min-height: 100vh;
-    }
-    
     .center-text {
         left: 50%;
         top: 12%;
         width: 90%;
         transform: translate(-50%, 0);
         text-align: center;
-        z-index: 1;
     }
     
     .center-text h1 {
@@ -178,7 +156,6 @@ a:hover, a:visited, a:focus, a:active {
         top: 45%;
         transform: translate(-50%, -50%);
         min-width: 200px;
-        z-index: 10;
     }
     
     .menu li {
